--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <script type="module" src="/main.js"></script>
     <div id="main">
+        <div id="box"></div>
         <div id="header">
             <div id="extend"><i class="ri-align-justify"></i></div>
-            <div id="box"></div>
+            
             <div id="logo">
                 <img src="images\Sathi__3_-removebg-preview.png" width="180px" height="140px">
             </div>
@@ -30,7 +31,7 @@
                 <h4>Login</h4>
             </div>
             <div id="sign">
-                <h4>Sign in</h4>
+                <h4>Sign up</h4>
             </div>
         </div>
 
