Added  background and sidebar

--- a/flight.html
+++ b/flight.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>FlyHigh</h1>
+            <h1>Book your taxi with Saathi-Your Adventure Partner</h1>
         </div>
         <nav>
             <ul>
