--- a/bus.html
+++ b/bus.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>BusBook</h1>
+            <h1>Book your bus with Saathi-Your Adventure Partner</h1>
         </div>
         <nav>
             <ul>
