--- a/train.html
+++ b/train.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>TrainGo</h1>
+            <h1>Book your taxi with Saathi-Your Adventure Partner</h1>
         </div>
         <nav>
             <ul>
