added map link g map service

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                   <li>Transportation Booking</li>
                   <li>Weather Forecast</li>
                   <li>Route</li>
-                  <li><a href="#">Open in Google Maps</a></li>
+                  <li><a href="https://www.google.com/maps?q=Your+Location" target="_blank">Open in Google Maps</a></li>
                   <li>Compare Fare</li>
                 </ul>
               </div>
