--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                   <li>Feedback</li>
                   <li>Travel History</li>
                   <li>Transportation Booking</li>
-                  <li>Weather Forecast</li>
+                  <li><a href="https://www.accuweather.com/" target="_blank">Weather Forecast</a></li>
+
                   <li>Route</li>
                   <li><a href="https://www.google.com/maps?q=Your+Location" target="_blank">Open in Google Maps</a></li>
                   <li>Compare Fare</li>
