contact details and some changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                   <li> </li>
                   <li> </li>
-                  <li>Home</li>
+                  <li>Home</li> 
                   <li>About Us</li>
                   <li>Feedback</li>
                   <li>Travel History</li>
@@ -40,7 +40,14 @@
             <div class="vehicle" id="flight"><a href="flight.html"><i class="ri-plane-line"></i></div></a>
             <div class="vehicle" id="train"><a href="train.html"><i class="ri-train-fill"></i></div></a>
             <div class="vehicle" id="taxi"><a href="cab.html"><i class="ri-taxi-fill"></i></div></a>
-            <div class="vehicle" id="contact">Contact Us</div>
+            <div class="vehicle" id="toggle-button">Contact Us</div>
+<div id="contact-details">
+    <p>Phone Number: 897456325</p>
+    <p>Email: sathi@gmail.com</p>
+</div>
+
+            
+            
             <div id="login">
                 <i class="ri-user-3-fill"></i>
                 <h4>Login</h4>
