next page of search bar

--- a/flight.html
+++ b/flight.html
@@ -38,8 +38,8 @@
                 <input type="date" id="return-date" name="return-date">
             </div>
             <div class="form-group">
-                <button type="submit">Search Flights</button>
-            </div>
+                <button type="submit"><a href="flight_result.html">Search Flights</button>
+            </div></a>
         </form>
     </section>
 
