--- a/train.html
+++ b/train.html
@@ -34,8 +34,8 @@
                 <input type="date" id="travel-date" name="travel-date" required>
             </div>
             <div class="form-group">
-                <button type="submit">Search Trains</button>
-            </div>
+                <button type="submit"><a href="train_result.html">Search Trains</button>
+            </div></a>
         </form>
     </section>
 
