--- a/bus.html
+++ b/bus.html
@@ -34,8 +34,8 @@
                 <input type="date" id="travel-date" name="travel-date" required>
             </div>
             <div class="form-group">
-                <button type="submit">Search Buses</button>
-            </div>
+                <button type="submit"><a href="bus_result.html">Search Buses</button>
+            </div> </a> 
         </form>
     </section>
 
