--- a/cab.html
+++ b/cab.html
@@ -39,8 +39,8 @@
                 <input type="time" id="travel-time" name="travel-time" required>
             </div>
             <div class="form-group">
-                <button type="submit">Search Cabs</button>
-            </div>
+                <button type="submit"><a href="cab_result.html">Search Cabs</button>
+            </div></a>
         </form>
     </section>
 
