--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   <li> </li>
                   <li> </li>
                   <li>Home</li> 
-                  <li>About Us</li>
+                  <li><a href="aboutus.html">About Us</li></a>
                   <li>Feedback</li>
                   <li>Travel History</li>
                   <li>Transportation Booking</li>
