--- a/train.html
+++ b/train.html
@@ -33,7 +33,7 @@
                 <label for="travel-date">Travel Date:</label>
                 <input type="date" id="travel-date" name="travel-date" required>
             </div>
-            <div class="form-group">
+            <div class="form-group" id="notblue">
                 <button type="submit"><a href="train_result.html">Search Trains</button>
             </div></a>
         </form>
