--- a/cab.html
+++ b/cab.html
@@ -38,7 +38,7 @@
                 <label for="travel-time">Travel Time:</label>
                 <input type="time" id="travel-time" name="travel-time" required>
             </div>
-            <div class="form-group">
+            <div class="form-group" id="notblue">
                 <button type="submit"><a href="cab_result.html">Search Cabs</button>
             </div></a>
         </form>
