--- a/flight.html
+++ b/flight.html
@@ -37,7 +37,7 @@
                 <label for="return-date">Return Date (optional):</label>
                 <input type="date" id="return-date" name="return-date">
             </div>
-            <div class="form-group">
+            <div class="form-group" id="notblue">
                 <button type="submit"><a href="flight_result.html">Search Flights</button>
             </div></a>
         </form>
