--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   <li> </li>
                   <li>Home</li> 
                   <li><a href="aboutus.html">About Us</li></a>
-                  <li>Feedback</li>
+                  <li><a href="feedback.html">Feedback</li></a>
                   <li>Travel History</li>
                   <li>Transportation Booking</li>
                   <li><a href="https://www.accuweather.com/" target="_blank">Weather Forecast</a></li>
