--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Saathi</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="extend.css">
-    <link rel="stylesheet" href="\login\login.css">
-    <link rel="stylesheet" href="\forgot\forgot.css">
+    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="forgot.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet"/>
 </head>
 <body>
@@ -48,7 +48,7 @@
     <p>Email: sathi@gmail.com</p>
 </div>
             <div id="register">
-                <h5>Register</h5>
+                <h5>Sign up</h5>
             </div>
             <button class="login-icon" onclick="openPopup()"><h5>Login</h5></button>
             <!-- Pop-Up -->
@@ -119,7 +119,7 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <script src="\login\login.js"></script>
-    <script src="\forgot\forgot.js"></script>
+    <script src="login.js"></script>
+    <script src="forgot.js"></script>
 </body>
 </html>
