--- a/login.html
+++ b/login.html
@@ -3,19 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>login</title>
+  <title>Login</title>
 </head>
 <body>
-  <h1>Signup</h1>
-  <form id="signupForm" action="/login" method="POST">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required><br><br>
+  <h1>login</h1>
+  <form id="loginForm">
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required><br><br>
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required><br><br>
-    <button type="submit">Signup</button>
+    <button type="submit">Login</button>
   </form>
-  <p>Already have an account? <a href="/">Login here</a>.</p>
+  <p>Don't have an account? <a href="/signup">Sign up here</a>.</p>
+
+  <script>
+    const loginForm = document.getElementById("loginForm");
+
+    loginForm.addEventListener("submit", async (event) => {
+      event.preventDefault(); // Prevent form submission
+
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      try {
+        const response = await fetch("/login", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ email, password }),
+        });
+
+        const data = await response.json();
+
+        if (response.ok && data.success) {
+          // Redirect to index.html on success
+          window.location.href = "index.html";
+        } else {
+          // Show error message for invalid credentials
+          alert(data.message || "Login failed. Please try again.");
+        }
+      } catch (error) {
+        console.error("Error:", error);
+        alert("An error occurred while logging in. Please try again.");
+      }
+    });
+  </script>
 </body>
 </html>
