Fixed sizes and added home link

--- a/aboutus.html
+++ b/aboutus.html
@@ -10,7 +10,7 @@
     <section id="about-us">
         <div class="container">
             <h1>About Us</h1>
-            <p class="intro-text">
+            <p class="intro-text" style="justify-content: center;">
                 Welcome to <strong>Saathi</strong>, where your journey begins! Whether you're planning a relaxing beach vacation, a thrilling adventure, or a cultural exploration, we’re here to turn your travel dreams into reality.
             </p>
             <div class="about-content">
@@ -51,10 +51,7 @@
             <div class="thank-you">
                 <h2>Thanks for Choosing Us!</h2>
                 <p>
-                    At <strong>Saathi</strong>, we believe travel is more than just moving from one place to another. It’s about creating memories, building connections, and experiencing the beauty of the world. 
-                </p>
-                <p>
-                    Thank you for trusting us to be a part of your journey. Your support inspires us to continually improve and bring you the best travel experiences. Here's to more adventures together!
+                    At <strong>Saathi</strong>, we believe travel is more than just moving from one place to another. It’s about creating memories, building connections, and experiencing the beauty of the world. Thank you for trusting us to be a part of your journey. Your support inspires us to continually improve and bring you the best travel experiences. Here's to more adventures together!
                 </p>
             </div>
         </div>
