opening in new page for vechicles

--- a/bus.html
+++ b/bus.html
@@ -5,9 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bus Booking</title>
     <link rel="stylesheet" href="bus.css">
+    <link rel="stylesheet" href="extend.css">
 </head>
 <body>
     <header>
+        <div id="header">
+            <div id="sidebar" class="sidebar">
+                <ul>
+                  <li> </li>
+                  <li> </li>
+                  <li style="padding-top: 60px; cursor: pointer; text-align: left;" ><a href="index.html">Home</li></a>
+                  <li style="text-align: left;"><a href="aboutus.html">About Us</li></a>
+                  <li style="text-align: left;"><a href="feedback.html">Feedback</li></a>
+                  <li style="text-align: left; color: black;">Travel History</li>
+                  <li style="text-align: left; color: black;">Transportation Booking</li>
+                  <li style="text-align: left;"><a href="https://www.accuweather.com/" target="_blank">Weather Forecast</a></li>
+
+                  <li style="text-align: left; color: black;">Route</li>
+                  <li style="text-align: left;"><a href="https://www.google.com/maps?q=Your+Location" target="_blank">Open in Google Maps</a></li>
+                  <li style="text-align: left; color: black;">Compare Fare</li>
+                </ul>
+              </div>
+            <button id="toggleButton" class="toggle-button">☰</button>
         <div class="logo">
             <h1>Book your bus with Saathi-Your Adventure Partner</h1>
         </div>
@@ -44,5 +63,6 @@
     <footer>
         <p>&copy; 2024 BusBook. All rights reserved.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
