--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <ul>
                   <li> </li>
                   <li> </li>
-                  <li style="padding-top: 60px; cursor: pointer;" ><a href="index.html">Home</li></a>
-                  <li><a href="aboutus.html">About Us</li></a>
-                  <li><a href="feedback.html">Feedback</li></a>
+                  <li style="padding-top: 60px; cursor: pointer;" ><a href="index.html" target="_blank">Home</li></a>
+                  <li><a href="aboutus.html" target="_blank">About Us</li></a>
+                  <li><a href="feedback.html" target="_blank">Feedback</li></a>
                   <li>Travel History</li>
                   <li>Transportation Booking</li>
                   <li><a href="https://www.accuweather.com/" target="_blank">Weather Forecast</a></li>
@@ -35,7 +35,7 @@
             <button id="toggleButton" class="toggle-button">☰</button>
         
             <div id="logo">
-                <img src="images\Sathi__3_-removebg-preview.png" width="305.3475px" height="200px">
+                <img src="images\Sathi__3_-removebg-preview.png" width="412.216px" height="270x">
             </div>
 
             <!-- Integrated Search Icon and Popup -->
@@ -66,12 +66,12 @@
             <!-- <div class="vehicle"><i class="ri-search-line"></i></div> -->
 
             <div class="vehicle" id="bus">
-                <a href="bus.html">
+                <a href="bus.html" target="_blank">
                 <i class="ri-bus-fill"></i>
             </div></a>
-            <div class="vehicle" id="flight"><a href="flight.html"><i class="ri-plane-line"></i></div></a>
-            <div class="vehicle" id="train"><a href="train.html"><i class="ri-train-fill"></i></div></a>
-            <div class="vehicle" id="taxi"><a href="cab.html"><i class="ri-taxi-fill"></i></div></a>
+            <div class="vehicle" id="flight"><a href="flight.html" target="_blank"><i class="ri-plane-line"></i></div></a>
+            <div class="vehicle" id="train"><a href="train.html" target="_blank"><i class="ri-train-fill"></i></div></a>
+            <div class="vehicle" id="taxi"><a href="cab.html" target="_blank"><i class="ri-taxi-fill"></i></div></a>
             <div class="vehicle" id="toggle-button"><h3>Contact Us</h3></div>
 <div id="contact-details">
     <p>Phone Number: 897456325</p>
